[gd_scene load_steps=20 format=3 uid="uid://iwof4dsp0u21"]

[ext_resource type="Script" uid="uid://n2k7m8eu8kjh" path="res://scripts/menu_manager.gd" id="1_ylpcl"]
[ext_resource type="Texture2D" uid="uid://d3ru2oskbob3j" path="res://sprites/app_store.png" id="2_5yleq"]
[ext_resource type="Texture2D" uid="uid://bv03akoe3eec1" path="res://sprites/popup.png" id="2_n4eug"]
[ext_resource type="Texture2D" uid="uid://cfg2aytyiorsj" path="res://sprites/loading.png" id="4_cx167"]
[ext_resource type="Texture2D" uid="uid://brkaiskgkwr3j" path="res://sprites/open.png" id="5_dolsu"]
[ext_resource type="Texture2D" uid="uid://cgued21upd6al" path="res://sprites/godot_icon.png" id="6_n4eug"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hcwhg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n4eug"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dlksc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4eug"]
bg_color = Color(1, 1, 1, 0.239216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dlksc"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.0392157)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5p1lm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hcwhg"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1igrg"]

[sub_resource type="Animation" id="Animation_dolsu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cx167"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n4eug"]
_data = {
&"RESET": SubResource("Animation_dolsu"),
&"spin": SubResource("Animation_cx167")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xucoo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8j1b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ylpcl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_n4eug")
expand_mode = 4
stretch_mode = 5

[node name="PanelContainer" type="Control" parent="VBoxContainer/HBoxContainer/MarginContainer/AspectRatioContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/AspectRatioContainer/PanelContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.386
anchor_top = 0.79
anchor_right = 0.969
anchor_bottom = 0.95
offset_left = 0.119995
offset_top = -0.200012
offset_right = -0.0200195
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(100, 40)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_hcwhg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_n4eug")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dlksc")
theme_override_styles/hover = SubResource("StyleBoxFlat_n4eug")
theme_override_styles/normal = SubResource("StyleBoxFlat_dlksc")

[node name="AppStore" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="AppStore"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.117647, 1)

[node name="TextureRect" type="TextureRect" parent="AppStore"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5yleq")
expand_mode = 2
stretch_mode = 5

[node name="ButtonGet" type="Button" parent="AppStore/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446
anchor_top = 0.18
anchor_right = 0.54
anchor_bottom = 0.221
offset_left = 0.343994
offset_top = 0.519989
offset_right = 0.559998
offset_bottom = -0.056015
theme_override_styles/focus = SubResource("StyleBoxEmpty_5p1lm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/hover = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1igrg")

[node name="TextureRect" type="ColorRect" parent="AppStore/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.439
anchor_top = 0.178
anchor_right = 0.611
anchor_bottom = 0.224
offset_left = 0.29599
offset_top = -0.208008
offset_right = -0.0960083
offset_bottom = -0.464005
color = Color(0.109804, 0.109804, 0.117647, 1)

[node name="Loading" type="TextureRect" parent="AppStore/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.445
anchor_top = 0.179
anchor_right = 0.489
anchor_bottom = 0.223
offset_left = 0.47998
offset_top = -0.344009
offset_right = 0.495972
offset_bottom = -0.328003
pivot_offset = Vector2(25, 25)
texture = ExtResource("4_cx167")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="AppStore/TextureRect/Loading"]
libraries = {
&"": SubResource("AnimationLibrary_n4eug")
}
autoplay = "spin"

[node name="Open" type="TextureRect" parent="AppStore/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446
anchor_top = 0.18
anchor_right = 0.54
anchor_bottom = 0.221
offset_left = 0.343994
offset_top = 0.519989
offset_right = 0.559998
offset_bottom = -0.056015
texture = ExtResource("5_dolsu")
expand_mode = 1

[node name="OpenButton" type="Button" parent="AppStore/TextureRect/Open"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.022
offset_bottom = -0.0120049
theme_override_styles/focus = SubResource("StyleBoxEmpty_xucoo")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/hover = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hcwhg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_n8j1b")

[node name="FlashScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="FlashScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="CenterContainer" type="CenterContainer" parent="FlashScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="FlashScreen/CenterContainer"]
layout_mode = 2
texture = ExtResource("6_n4eug")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer/AspectRatioContainer/PanelContainer/Button" to="." method="app_store_pressed"]
[connection signal="pressed" from="AppStore/TextureRect/ButtonGet" to="." method="on_get_pressed"]
[connection signal="pressed" from="AppStore/TextureRect/Open/OpenButton" to="." method="on_open_pressed"]
